Fix button clipping issue

--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -8,6 +8,7 @@ h2 {
   display: flex;
   justify-content: center;
   align-items: center;
+  padding-bottom: 10px;
 }
 
 .portfolio-item img {
